--- a/st20335961_CMP7005_PRAC1.ipynb
+++ b/st20335961_CMP7005_PRAC1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMeJNYI7SgZVkMDCzV3RuSw",
+      "authorship_tag": "ABX9TyO0RdMCyT2iDjoBq5nqajWB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -7401,7 +7401,7 @@
         "📘 **count**\n",
         "\n",
         "This shows how many valid (non-missing) values are present for each column.\n",
-        "👉 For the given dataset, every column has 420,768 records — meaning there are 420,768 hourly observations.\n",
+        "👉 For the given dataset, every column has 29,531 observations.\n",
         "\n",
         "---\n",
         "📆 **mean (average)**\n",
@@ -7410,9 +7410,7 @@
         "\n",
         "PM2.5 = 80.15 → On average, the PM2.5 concentration is 80.15 µg/m³, which indicates moderate air pollution.\n",
         "\n",
-        "TEMP = 13.53°C → The average temperature across all stations and times is 13.5°C.\n",
         "\n",
-        "PRES = 1010.75 hPa → Average atmospheric pressure, typical for normal weather conditions.\n",
         "\n",
         "---\n",
         "\n",
@@ -7422,7 +7420,6 @@
         "\n",
         "PM2.5 ranges from 2 to 999 → Sometimes air quality was excellent (low PM2.5), but at other times, it reached extremely high levels — possibly during pollution spikes.\n",
         "\n",
-        "TEMP ranges from -19.9°C to 41.6°C → Reflects cold winters and hot summers.\n",
         "\n",
         "CO ranges from 100 to 10,000 µg/m³ → Suggests occasional severe carbon monoxide peaks, possibly due to traffic or industrial emissions.\n",
         "\n",
@@ -7479,10 +7476,7 @@
         "🌦️**General Interpretation**\n",
         "\n",
         "The air quality indicators (PM2.5, PM10, NO2, CO) have high means and large variability, showing that pollution levels often fluctuate.\n",
-        "\n",
-        "Weather parameters like temperature and pressure behave as expected — wide temperature changes with seasons, but relatively stable pressure.\n",
-        "\n",
-        "Rainfall and wind speed values suggest mostly dry and calm conditions, with occasional rain and light to moderate winds."
+        "\n"
       ],
       "metadata": {
         "id": "xwx3zisHu06g"
